# Ambi-Low-Level-Job-System

./: Ambi.slnx  LICENSE  README.md
Ambi/: Ambi.cpp  Ambi.vcxproj  Ambi.vcxproj.filters  CMakeLists.txt  JobQueue.cpp  JobQueue.h  LocalJobQueue.cpp  LocalJobQueue.h  WorkerThreads.cpp  WorkerThreads.h
AmbiTests/: AmbiTests.cpp  AmbiTests.vcxproj  AmbiTests.vcxproj.filters  UnitTests.cpp
Documentation/html/: _job_queue_8h_source.html  _local_job_queue_8h_source.html  _worker_threads_8cpp_source.html  class_job_queue-members.html  class_job_queue.html  class_job_queue.js  class_local_job_queue-members.html  class_local_job_queue.js  class_worker_threads.js  classes.html  doxygen_crawl.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  navtreeindex0.js
Documentation/latex/: _job_queue_8h_source.tex  _local_job_queue_8h_source.tex  class_local_job_queue.eps  class_local_job_queue.tex  class_worker_threads.tex  hierarchy.tex  refman.tex
docs/: CNAME  _local_job_queue_8cpp_source.html  annotated.html  annotated_dup.js  class_local_job_queue.html  class_worker_threads.html  navtreedata.js
docs/html/: _job_queue_8cpp_source.html  _worker_threads_8h_source.html  class_worker_threads-members.html  files.html  functions_vars.html  index.html
docs/latex/: _job_queue_8cpp_source.tex  _local_job_queue_8cpp_source.tex  _worker_threads_8cpp_source.tex  _worker_threads_8h_source.tex  annotated.tex  class_job_queue.eps  class_job_queue.tex  files.tex
docs/search/: all_2.js  classes_2.js  functions_1.js  searchdata.js
(+10 files in other folders)
